Fixed spacing for task liist

--- a/obsidian.css
+++ b/obsidian.css
@@ -446,7 +446,7 @@ input[type="number"] {
 	background-repeat: no-repeat;
 	background-size: 70%;
 }
-.markdown-preview-view .task-list-item { text-indent: -30px; margin-left:0;}
+.markdown-preview-view .task-list-item { text-indent: -0.5em; margin-left:0;}
 .markdown-preview-view .task-list-item-checkbox { margin-left:-25px; } 
 .markdown-preview-view .task-list-item { padding-inline-start:25px; }
 
